--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@splinetool/react-spline": "^3.1.0",
     "@splinetool/runtime": "^1.6.8",
     "gsap": "^3.12.5",
+    "lenis": "^1.1.6",
     "lucide": "^0.394.0",
     "lucide-react": "^0.394.0",
     "react": "^18.2.0",
